--- a/hpyryde-pickup-service/src/main/resources/application.properties
+++ b/hpyryde-pickup-service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8768
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
+eureka.server.waitTimeInMsWhenSyncEmpty=0
+
+spring.profiles=cloud
+
+spring.application.name=hpyryde-pickup-service
+spring.cloud.config.server.uri=${CONFIG_SERVER_URI:${vcap.services.${PREFIX:}configserver.credentials.uri:http://localhost:8888}}
 
