--- a/pom.xml
+++ b/pom.xml
@@ -2,21 +2,22 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.3.0.M5</version>
 	</parent>
+
 	<groupId>org.hpyryde</groupId>
 	<artifactId>hpyryde</artifactId>
 	<version>1.0.0.BUILD-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>hpyryde</name>
-
+	<name>HpyRyde App</name>
 
 	<modules>
-		<module>hpyryde-location-ingest-service</module>
 		<module>hpyryde-discovery-server</module>
+		<module>hpyryde-location-ingest-service</module>
 	</modules>
 
 	<properties>
@@ -34,6 +35,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -45,6 +47,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
 	<repositories>
 		<repository>
 			<id>spring-snapshots</id>
@@ -81,5 +84,5 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
-</project>
 
+</project>
