--- a/hpyryde-location-ingest-service/src/main/resources/application.properties
+++ b/hpyryde-location-ingest-service/src/main/resources/application.properties
@@ -1,10 +1,3 @@
-server.port=8764
-eureka.client.registerWithEureka=false
-eureka.client.fetchRegistry=false
-eureka.server.waitTimeInMsWhenSyncEmpty=0
-
-spring.profiles=cloud
-
+server.port=9006
 spring.application.name=hpyryde-location-ingest-service
-spring.cloud.config.server.uri=${CONFIG_SERVER_URI:${vcap.services.${PREFIX:}configserver.credentials.uri:http://localhost:8888}}
-
+spring.cloud.stream.bindings.output=vehicles
