discovery ui and server code completed

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 
 	<modules>
 		<module>hpyryde-discovery-server</module>
+		<module>hpyryde-discovery-ui</module>
 		<module>hpyryde-location-ingest-service</module>
 	</modules>
 
