--- a/hpyryde-discovery-server/src/main/resources/application.properties
+++ b/hpyryde-discovery-server/src/main/resources/application.properties
@@ -3,7 +3,6 @@ eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
 eureka.server.waitTimeInMsWhenSyncEmpty=0
 
-spring.profiles=cloud
+#spring.profiles=cloud
 spring.application.name=hpyryde-discovery-server
-spring.cloud.config.server.uri=${CONFIG_SERVER_URI:${vcap.services.${PREFIX:}configserver.credentials.uri:http://localhost:8761}}
-
+#spring.cloud.config.server.uri=${CONFIG_SERVER_URI:${vcap.services.${PREFIX:}configserver.credentials.uri:http://localhost:8888}}
