--- a/hpyryde-discovery-ui/src/main/resources/application.properties
+++ b/hpyryde-discovery-ui/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-server.port=8762
-eureka.client.registerWithEureka=false
-eureka.client.fetchRegistry=false
-eureka.server.waitTimeInMsWhenSyncEmpty=0
-
-spring.profiles=cloud
-
-spring.application.name=hpyryde-discovery-ui
-spring.cloud.config.server.uri=${CONFIG_SERVER_URI:${vcap.services.${PREFIX:}configserver.credentials.uri:http://localhost:8888}}
-
+info.component=Discovery UI Dashboard
+endpoints.restart.enabled=true
+endpoints.shutdown.enabled=true
+server.port=7979
+logging.level.ROOT=info
+logging.level.org.springframework.web=DEBUG
+eureka.client.region=default
+eureka.client.instance.virtualhostname=hpyryde-discovery-ui
