--- a/hpyryde-ui-service/src/main/resources/application.properties
+++ b/hpyryde-ui-service/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-server.port=8769
-eureka.client.registerWithEureka=false
-eureka.client.fetchRegistry=false
-eureka.server.waitTimeInMsWhenSyncEmpty=0
-
-spring.profiles=cloud
-
 spring.application.name=hpyryde-ui-service
-spring.cloud.config.server.uri=${CONFIG_SERVER_URI:${vcap.services.${PREFIX:}configserver.credentials.uri:http://localhost:8888}}
-
+stomp.url=localhost:9007/stomp
+zuul.routes.hpyryde-location-service.path=/hpyryde-location-service/**
+zuul.routes.hpyryde-location-service.url=http://localhost:9000
+zuul.routes.hpyryde-pickup-service.path=/hpyryde-pickup-service/**
+zuul.routes.hpyryde-pickup-service.url=http://localhost:9001
